# z

./: .dockerignore  .env.bak  .gitignore  .harness_context_20260223_030522.json  .harness_context_20260321_155034.json  .harness_debug.txt  CLAUDE.md  CLAUDE_CODE_PARITY_REPORT.md  Dockerfile.build  Dockerfile.test  Dockerfile.z  README.md  _analyze_imports.py  _confidential_agreement.txt  _parse_rtf.py  build.py  claude-code-architecture.md  compliment_for_cline.md  context-management.md  dead_code_report.md  debug_output.txt  debug_python_prompt.txt  harness.py  harness.spec  integration_test.py  parity_validation.py  pyproject.toml  pytest.ini  recover_harness.bat  recover_harness.sh  refactor_prompt.txt  requirements.txt  safe_harness.py  stream.py  sub_agent.md  test_bedrock_limits.py  test_bedrock_quota.py  test_bedrock_rolling_quota.py  test_copilot_reasoning.py  test_headless.py  (+11 more)
.claude/: settings.json
.forge/: history
.mcp-browsermcp/: package-lock.json
docs/: COS_INSTRUCTIONS.md  context-management.md  system_prompt_instructions.md
harness_go/: .harness_debug.txt  File path here  Makefile  api.go  app.go  config.go  context.go  cost.go  go.mod  install.go  main.go  prompts.go  prompts.go.bak  session.go  tools.go
src/: z_cli.py
tests/: conftest.py  smoke_test_blackbox.py  stress_test.py  stress_test_linux.py  test_compaction_quality.py  test_config.py  test_context_replay.py  test_dsml_parsing.py  test_fuzzy_replace.py  test_generate_prompts_go.py  test_native_tool_calling.py  test_parser_recovery.py  test_prompt_tool_reconciliation.py  (+9 more)
(+121 files in other folders)
